force-app/main/default/objects/Call_Off_Contract__c/Call_Off_Contract__c.object-meta.xml
<CustomObject>
    <label>Call Off Contract</label>
    <nameField>
        <label>Call Off Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Off Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>