force-app/main/default/objects/Call_Off_Contract__c/fields/Agreement_Sys_Id__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sys_Id__c</fullName>
    <formula>Parent_Contract__r.Sys_Id_External__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Sys_Id</label>
    <type>Text</type>
</CustomField>