force-app/main/default/objects/Call_Off_Contract__c/fields/CallOffLink__c.field-meta.xml
<CustomField>
    <fullName>CallOffLink__c</fullName>
    <formula>&quot;https://alfred.service-now.com/x/steas/contracts-archive/record/x_steas_contracts_archive/&quot;&amp;Sys_Id_External__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Off Link</label>
    <type>Text</type>
</CustomField>