force-app/main/default/objects/Call_Off_Contract__c/fields/Parent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contract</label>
    <referenceTo>Contract_Archive__c</referenceTo>
    <relationshipLabel>Call Off Contracts</relationshipLabel>
    <relationshipName>Call_Off_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>