force-app/main/default/objects/Call_Off_Contract__c/fields/Sys_Id_External__c.field-meta.xml
<CustomField>
    <fullName>Sys_Id_External__c</fullName>
    <externalId>true</externalId>
    <label>Sys Id External</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>