force-app/main/default/objects/Call_Off_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Agreement_Name__c</columns>
    <columns>Agreement_Sys_Id__c</columns>
    <columns>Contract_Number__c</columns>
    <columns>Number__c</columns>
    <columns>Sys_Id_External__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>